# bread-ingredient-calculator

./: README.md  pyproject.toml
calculator/: main.py
calculator/hamburger_bread/: ingredient_factor.py  operation.py
calculator/normal_bread/: ingredient_factor.py  operation.py
