[tool.poetry]
name = "bread-ingredient-calculator"
version = "0.1.0"
description = ""
authors = ["Samuel Sublate <samuelsublate.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["all"], version = "^0.9.0"}
rich = "^13.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
